<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_slam</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="khwanchai00gg@gmail.com">mekkkk</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>rtabmap</exec_depend>
  <exec_depend>rtabmap_conversions</exec_depend>
  <exec_depend>rtabmap_demos</exec_depend>
  <exec_depend>rtabmap_examples</exec_depend>
  <exec_depend>rtabmap_launch</exec_depend>
  <exec_depend>rtabmap_msgs</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>rtabmap_python</exec_depend>
  <exec_depend>rtabmap_odom</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rtabmap_sync</exec_depend>
  <exec_depend>rtabmap_util</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
